finished blog 5, minor tweaks

--- a/containerization-series/05.ace-startup-optimization.md
+++ b/containerization-series/05.ace-startup-optimization.md
@@ -1,51 +1,65 @@
 # Containerizing IBM ACE: A Blog Series - Container Startup Optimization
 
-I've been wondering how we can optimize ACE containers at startup. Seeing as the actual startup process of ACE is a lot 
-more resource intensive than actually running the integration server, I wanted to create a scenario to use as little 
-additional resources as possible.
+Why do ACE containers take so long to boot?
 
-I've gone for three approaches:
-- **Base image: everything is done at container startup**
-- **Prebaked image: the deploy/optimize/cold-start is done at container build time and a warm-start is done at the container startup**
-- **Init container: the init container performs the deploy/optimize/cold-start and the runtime container performs a warm-start**
+Not talking about your basic hello-world flows, but real-life integration servers. You’d expect most of the load to 
+happen after boot, when traffic starts flowing. But in practice, container startup is often the most resource-intensive 
+part of the whole lifecycle.
 
-cold-start = first start from a new integration server work directory
-warm-start = second start from an already previously used integration server work directory.
+So I wanted to see how far I could push it. Not in the build pipeline, not in CI. Just at runtime. What can I offload, 
+pre-bake, or reuse to make that startup hit as light as possible?
 
-I only ran the first two in Docker because that was less setup than using minikube. But there is no reason not to also 
-try all three on a Minikube cluster.
+I tested three container setups:
+- **Base image**: Everything happens at container start, let's call this a cold-start.
+- **Prebaked image**: BAR files are deployed and optimized during the build. Startup is a warm-start.
+- **Init container**: A prep container handles deploy and optimize before the runtime container performs a warm-start.
+
+Quick defs:
+- **Cold-start**: first start of a new Integration Server work directory.
+- **Warm-start**: starting a server that’s been started before.
+
+To keep it simple, I ran the first two setups in Docker. The third one needed Minikube. You could run all three on 
+Kubernetes, this was just the quickest way to test.
 
 > Disclaimer
-> I've used the ACE 13.0.4.0 image in the entire setup. If you don't have access to that specific image, you can always 
-> use the free developer image that you can download from IBM: [IBM App Connect Enterprise Evaluation Edition free product download](https://www.ibm.com/resources/mrs/assets/mrs_landing_page?source=swg-wmbfd&lang=en_US)
+> All tests used the ACE 13.0.4.0 image. Don’t have access? IBM provides a free developer edition as well:
+> [IBM App Connect Enterprise Evaluation Edition free product download](https://www.ibm.com/resources/mrs/assets/mrs_landing_page?source=swg-wmbfd&lang=en_US)
 
 ## Standalone Integration Server
 
-A really basic setup you can quickly test, just to show you that a warmed runtime does make a difference:
-- Create a new Standalone Integration Server (SIS), SERVER-COLD
-- Deploy your BAR Files
+Here’s a quick sanity check you can do without containers. Just to prove warm-starts are real:
+- Create a new Standalone Integration Server (SERVER-COLD)
+- Deploy your BAR files
 - Run ibmint optimize server
-- Start and stop your SIS
-- create a new SIS, SERVER-WARM
-- copy your SERVER-COLD directory contents to the SERVER-WARM directory
-- start SERVER-WARM
+- Start and stop the server
+- Copy the full SERVER-COLD directory to a new folder, say SERVER-WARM
+- Start SERVER-WARM
 
-This should give you some big speed increased already. Big is relative, if you just put a very simple hello-world flow 
-in there, changes will be marginal. If you put some complex flow, or multiple flows, and big schemas in there, then the 
-difference becomes more obvious.
+You should see a noticeable speedup on the second start.
+
+Now, if you're only deploying a toy flow with no real logic (what I am doing), don’t expect miracles. But once you throw 
+in some complex flows and heavy schemas, the difference becomes obvious.
 
 ## Base image
 
-For this setup I've created a base image with ACE installed where nothing happens automatically. After spinning up the 
-runtime, you need to open a terminal, deploy, optimize and start the Integration Server. To make this easier, I put those 
-actions in a script, `start.sh`
+This is the unoptimized baseline. You get a container with ACE installed and nothing else. Every time you run it, the 
+container starts cold. Deploy, optimize, and startup all happen at runtime. It's simple, slower, and exactly what you'd 
+expect when nothing is prepped in advance.
 
-**Files referenced**
-- `Dockerfile`: your ACE v13 base image.
-- `start.sh`: deploy → optimize → start script (meant to be run manually).
-- `bars/`: BARs baked into the image (lazy solution, you can mount them if you prefer).
+To keep this setup under control, I built a base image where the Integration Server doesn’t auto-start. That gives me a 
+clean slate every time. Instead of typing out the same commands over and over, I wrapped the deploy, optimize, and start 
+steps into a `start.sh` script. Full control, less repetition.
 
-### 1) **Build**
+**Files included in this setup:**
+- `Dockerfile`: ACE 13 base image, modified so the Integration Server doesn't auto-start
+- `start.sh`: script to deploy, optimize, and start manually
+- `bars/`: BAR files baked into the image (can be mounted instead if you prefer)
+
+**Build the image**<br />
+
+Build the container using your modified Dockerfile. This creates a clean ACE 13 base image without any startup behavior 
+baked in.
+
 ```powershell
 docker build -t ace-base:13.0.4.0 -f Dockerfile .
 [+] Building 2.1s (20/20) FINISHED                                                                                                              docker:desktop-linux
@@ -55,10 +69,10 @@ docker build -t ace-base:13.0.4.0 -f Dockerfile .
 ...
 ```
 
-### 2) **Run (idle container)**
+**Run the container**<br />
 
-I'm using these parameters because I want to have an interactive shell with the container and I only want the container
-to exist as long as I am connected to it (makes cleanup and port re-use easier).
+Start the container with an interactive terminal (`-it`) and a temporary lifecycle (`--rm`). This gives you direct control, 
+and the container cleans itself up when you’re done.
 
 ```powershell
 docker run --name ace-base -e LICENSE=accept -p 7600:7600 -p 7800:7800 --rm -ti ace-base:13.0.4.0
@@ -69,9 +83,9 @@ MQSI 13.0.4.0
 [aceuser@09b8e93505ae ace-server]$ 
 ```
 
-### 3) **Start runtime**
+**Start the runtime**<br />
 
-Start hte IntegrationServer From inside the still open terminal.
+From inside the container, run the script to deploy the BAR files, optimize the setup, and launch the Integration Server.
 
 ```powershell
 [aceuser@09b8e93505ae ace-server]$ /scripts/start.sh 
@@ -82,9 +96,10 @@ Generating runtime objects: '/var/mqsi/mqsibar/temp-7486f378-917e-11f0-9c80-ac11
 ...
 ```
 
-### 4) **Logs**
+**Check the logs**<br />
 
-Check the written logs (remember the script writes to /tmp/is.log) and note the time of the first and last entry
+The script prints a few progress messages, but the full IntegrationServer output is redirected to /tmp/is.log. Open the 
+file and compare the first and last entries to see how long startup took.
 
 ```powershell
 [aceuser@09b8e93505ae ace-server]$ cat /tmp/is.log
@@ -95,33 +110,40 @@ Check the written logs (remember the script writes to /tmp/is.log) and note the 
 ...
 ```
 
-### 5) **Stop and cleanup**
+**Stop and clean up**<br />
 
-Because of the way we started the container, the container will be automatically stopped and cleaned up when we exit the 
-terminal.
+Exit the container shell when you are done. Because you started it with `--rm`, Docker removes the container automatically. 
+This also frees up the ports for the next test.
 
 ```powershell
 [aceuser@09b8e93505ae ace-server]$ exit
 exit
 >
 ```
-Make sure to do this before continuing with the next step, since I'm using the same ports for all containers. If you want 
-to run them side by side, choose different ports.
+
+The point of this setup isn’t speed. It’s about having a baseline. By running everything cold, you can measure the real 
+cost of startup and use it as the reference when testing more optimized approaches.
 
 ## Prebaked image
 
-Here I wanted to do an extensive bake. Really put everything in the image, even an already started runtime. In order to 
-accomplish this, my docker build process actually deploys the bar files and optimizes and starts the Integration Server. 
-This 'warmed-up' runtime is then packaged. All these actions are again put in a single script, `warmup.sh`.
+With this setup I went further. Not just deploying BAR files at build time, but fully optimizing and starting the 
+Integration Server once so that state is baked directly into the image. The goal was simple: create a container that 
+comes up warm every time. No partial prep and no halfway measures. _Everything_ is prebaked.
 
-**Files referenced**
-- `Dockerfile`: multi-stage build that deploys/optimizes and first-starts during build.
-- `bars/`: BARs included at build time.
-- `warmup.sh`: deploy, optimize and start.
+To make this work, I used a multi-stage Docker build that calls a warmup.sh script during build. That script deploys the
+BAR files, runs `ibmint optimize server`, and starts the Integration Server once so the warmed state is captured in the 
+image.
 
-### 1) **Build**
+**Files included in this setup:**
+- `Dockerfile`: multi-stage build that deploys, optimizes, and starts during build
+- `warmup.sh`: script that handles the deploy, optimize, and start steps
+- `bars/*`: BAR files baked into the image at build time
 
-Run the build of the prebaked ace image
+
+**Build the image**<br />
+
+Run the multi-stage build to create the prebaked container. This step deploys the BAR files, runs ibmint optimize server, 
+and starts the Integration Server once during the build process.
 
 ```powershell
 docker build -t ace-prebaked:13.0.4.0 -f Dockerfile .
@@ -132,9 +154,9 @@ docker build -t ace-prebaked:13.0.4.0 -f Dockerfile .
 ...
 ```
 
-### 2) **Run**
+**Run the container**<br />
 
-Start the newly build `ace-prebaked:13.0.4.0` image, again with the --rm and -ti parameters for ease of use.
+Start the prebaked image with an interactive terminal (`-it`) and a temporary lifecycle (`--rm`).
 
 ```powershell
 docker run --name ace-prebaked -e LICENSE=accept -p 7600:7600 -p 7800:7800 --rm -ti ace-prebaked:13.0.4.0
@@ -142,13 +164,14 @@ docker run --name ace-prebaked -e LICENSE=accept -p 7600:7600 -p 7800:7800 --rm 
 BIP2112E: IBM App Connect Enterprise internal error: diagnostic information ''No such file or directory'', '2'. 
 ```
 
-That error line isn't actually an error, you can ignore that one. let's have a look at the full log (that we exported to /tmp/is.log)
+You might see a BIP2112E message right after startup. That line looks like an error, but it can be ignored, the server 
+still runs fine.
 
+**Check the logs**<br />
 
-### 3) **Logs**
-
-Let's have a look at the full log (that we exported to /tmp/is.log). Open a new terminal (the open one is linked to the 
-running IntegrationServer process) and check the log file.
+The Integration Server runs directly as the main process. Its output is redirected to `/tmp/is.log`, so you cannot see it 
+in the opened terminal. Do not try to stop the process, because that will also terminate the session and the container. 
+Instead, use a second terminal to inspect the log file.
 
 ```powershell
 docker exec -it ace-prebaked bash   
@@ -167,9 +190,10 @@ MQSI 13.0.4.0
 
 As you can see, ace started properly.
 
-### 4) **Stop and cleanup**
+**Stop and clean up**<br />
 
-Because of the way we started the container, if we exit the terminal, the container will be automatically stopped and cleaned up.
+When you are done, exit the terminal. Because the container was started with `--rm`, Docker removes it automatically. This
+also frees up the ports for the next test.
 
 ```powershell
 [aceuser@09b8e93505ae ace-server]$ exit
@@ -177,18 +201,31 @@ exit
 > 
 ```
 
-Make sure to do this if you plan on testing the base image as well, since I'm using the same ports for all containers.
+The point of this setup is speed. By baking in deployment, optimization, and an initial start, the runtime container skips 
+most of the heavy lifting. It is less flexible than the base image, but it shows how much startup time you can cut when 
+everything is prebaked.
 
 ## Init container
 
-**Files referenced**
-- `Dockerfile`: for image `ace-init:13.0.4.0`
-- `warmup.sh`: deploy, optimize, start and stop
-- `deployment-init.yaml`: Deployment+Service:
+Could you optimize your container start without touching your build process? Turns out, it’s possible. By using an init 
+container, a short-lived container that exits once it finishes. You can push the heavy tasks like deploy, optimize, and 
+start into that environment. The main container then launches from the warmed runtime.
 
-### 1) **Make image available to Minikube**
+I wanted to see if this would give me the best of both worlds: faster startup without baking everything into the image, 
+and with more flexibility left in the pipeline.
 
-Build the init container image:
+To set this up, I built an image with a warmup.sh script and used a Kubernetes deployment that runs both the init 
+container and the runtime container.
+
+**Files included in this setup:**
+- `Dockerfile`: builds the image ace-init:13.0.4.0
+- `warmup.sh`: script that deploys, optimizes, starts, and then _stops_ the Integration Server
+- `deployment-init.yaml`: Kubernetes Deployment and Service definition for running the init and runtime containers together
+
+**Build the image**<br />
+
+Start with the Dockerfile that creates the ace-init:13.0.4.0 image. This image includes the warmup.sh script, which runs 
+the deploy, optimize, start, and stop sequence when used as an init container.
 
 ```powershell
 docker build -t ace-init:13.0.4.0 -f Dockerfile .     
@@ -199,18 +236,20 @@ docker build -t ace-init:13.0.4.0 -f Dockerfile .
 ...
 ```
 
-Make it available inside the minikube image repository:
+**Build the image**<br />
+
+Make the image available inside the Minikube registry so the cluster can pull it.
 
 ```powershell
 minikube image load ace-init:13.0.4.0 --overwrite=true
 ```
 
-You can also build it directly into minikube, but I prefer building at my machine level and solving any possible issues before
-uploading it into the minikube registry.
+You can also build directly inside Minikube, but loading from your local build keeps the loop short and predictable.
 
-### 2) **Apply Deployment/Service**
+**Apply the deployment**<br />
 
-Create the ACE runtime deployment and an ingress server to connect to the runtime later on.
+Use the Kubernetes manifest to create both the init and runtime containers. This deployment also includes a service so 
+you can connect later.
 
 ```powershell
 kubectl apply -f .\deployment-init.yaml
@@ -218,7 +257,7 @@ deployment.apps/ace-init-prep created
 service/ace-init-prep created
 ```
 
-Wait for it to Start, the state shoudl change to Running, showing that 1 out of 1 pods are active.
+Check the pod status until it shows as running with an active instance.
 
 ```powershell
 ace-init-prep-7987d6f688-s85tw   0/1     Init:0/1      0          4s
@@ -226,9 +265,10 @@ ace-init-prep-7987d6f688-s85tw   0/1     PodInitializing   0          17s
 ace-init-prep-7987d6f688-s85tw   1/1     Running           0          22s
 ```
 
-### 3) **View logs**
+**Check the logs** <br />
 
-We have 2 containers to check now, let's beging with the init container
+Start with the init container (don't forget we have 2 container now). It should show the deploy and optimize sequence, 
+then a clean exit.
 
 ```powershell
 kubectl logs deploy/ace-init-prep -c prep
@@ -258,17 +298,14 @@ BIP8071I: Successful command completion.
 [2025-09-14 15:50:08] Warmup complete; exiting init
 ```
 
-You can clearly see that the init container stopped after a successful startup. Now let's look at the actual runtime 
-container.
+Now check the runtime container. Its stdout stays quiet because the Integration Server output is redirected to `/tmp/is.log`.
 
 ```powershell
 kubectl logs -f deploy/ace-init-prep -c runtime
 
 ```
 
-This output is remaining empty, that is simply because I directed all the output away to the /tmp/is.log file because of 
-how I build the container. There is no need to build it that way, I just wanted to write to the /tmp/is.log file, just 
-like with the other 2 setups. So let's have a look at that one.
+Open a shell in the runtime container and read the log file.
 
 ```powershell
 kubectl exec -it deploy/ace-init-prep -c runtime -- bash
@@ -285,29 +322,33 @@ MQSI 13.0.4.0
 2025-09-14 15:50:12.967679: BIP1991I: Integration server has finished initialization.
 ```
 
-Integration server started successfully
+Integration server started successfully. Well done us.
 
-### 4) **Sanity checks**
+**Run sanity checks**<br />
 
-Initially I forgot to install the `ps` command into my container, so I couldn't use `ps -ef` to check if my process was 
-running. There is another way to do that, though. If you still have a terminal open:
+To confirm the runtime container is active, you can inspect the process directly by checking the cmdline (if you don't 
+have `ps` installed). If you still have a shell open:
 
 ```powershell
 [aceuser@ace-init-prep-7987d6f688-s85tw /]$ cat /proc/1/cmdline
 bash-c. /opt/ibm/ace-13/server/bin/mqsiprofile && IntegrationServer --name ${ACE_SERVER_NAME} -w /home/aceuser/ace-server > /tmp/is.log 2>&1
 ```
 
-That is the IntegrationServer running. If you have closed your terminal already, you can simply use a one-liner:
+If the terminal is closed, you can run it in one line:
 
 ```powershell
 kubectl exec -it deploy/ace-init-prep -c runtime -- sh -lc "tr '\0' ' ' </proc/1/cmdline; echo"
 bash-c. /opt/ibm/ace-13/server/bin/mqsiprofile && IntegrationServer --name ${ACE_SERVER_NAME} -w /home/aceuser/ace-server > /tmp/is.log 2>&1
-
-# Confirm optimized workdir
-kubectl exec -it deploy/ace-init-prep -c runtime -- sh -lc "ls -l /home/aceuser/ace-server; test -f /home/aceuser/ace-server/server.components.yaml && echo optimized"
 ```
 
-Or, and this is obviously the most telling one, use the webui. Forward port 7600 and 7800 to your k8s instance
+You can also check that the work directory is optimized:
+
+```powershell
+kubectl exec -it deploy/ace-init-prep -c runtime -- sh -lc "ls -l /home/aceuser/ace-server; test -f /home/aceuser/ace-server/server.components.yaml && echo optimized"
+
+```
+
+And if you prefer a more visual confirmation, forward the ports and open the web UI:
 
 ```powershell
 kubectl port-forward deploy/ace-init-prep 7600:7600 7800:7800
@@ -317,58 +358,82 @@ Handling connection for 7600
 Handling connection for 7600
 ```
 
-And point your favourite browser to https://localhost:7600/
+Then point your browser at: https://localhost:7600/
 
 ![img.png](img.png)
+
+This setup proves you can push optimization into runtime without touching the build. The init container takes care of the 
+heavy work and exits, leaving the main container warmed and ready. It adds some complexity compared to the other options, 
+but in return you get flexibility, faster startup, and potentially a lighter hit on your licenses.
+
+>License disclaimer
+These are just my observations. Always confirm with your account manager to understand the impact in your environment.
 
 ## Results
 Now, let's compare the results.
 
-| setup            | time | remark                                               |
-|------------------|------|------------------------------------------------------|
-| ace-base         | 5.5s | from deploy until 'finished initialization'          |
-| ace-prebaked     | 3.2s | from starting the IS until 'finished initialization' |
-| ace-init-prep    | 6s   | from deploy until stop IS                            |
-| ace-init-runtime | 2.9s | from starting the IS until 'finished initialization' |
+| setup             | time | remark                                               |
+|-------------------|------|------------------------------------------------------|
+| Base image        | 5.5s | From deploy until 'finished initialization'          |
+| Prebaked image    | 3.2s | From starting the IS until 'finished initialization' |
+| Init container    | 6s   | From deploy until stop IS                            |
+| Runtime container | 2.9s | From starting the IS until 'finished initialization' |
 
-You see a clear difference between the ace-base and the other two images. I can't pick a clear winner here, but that was
-never the point. These are 2 rather extreme ways of optimizing your runtimes and my main goal was just to see how to set
-that up and how that was going to play out.
+
+The numbers make the contrast clear. The base image lags behind, while both prebaked and init container setups shave off 
+noticeable time. There is no single winner here, but that was never the goal. These are two very different approaches to 
+runtime optimization, and the real takeaway is that you have options.
 
 ## But why
 
-Apart from this being an interesting test setup (well, for me anyway, [insert nerd joke here]), there are reasons why 
-you would prefer either of these setups.
+Apart from being a fun exercise (well, for me at least), there are real reasons why you might choose one setup over 
+another.
 
-### Prebaked
-If you have full control of what you want to deploy (and if you like baking images, I don't), you can perform a lot of 
-the startup overhead at pipeline level. This greatly reduces the startup time and overhead of your actual container.
-The downside here is you have to bake everything in. You can still insert secrets and config at startup time, but 
-everything else needs to be supplied during the build phase. One big caveat is that the build and runtime environments 
-need to be identical. If you build/bake with 13.0.3.0 and run at 13.0.4.0, all the startup optimizations will be for 
-naught.
 
-### Init containers
-This is more a solution for people that like to fry (yah, something for me). By providing the init container with all the 
-resources you need, you actually to the build optimizations at runtime. Just like with the prebaked setup, it is important 
-to use the same runtime versions for your prep and runtime containers. Which is what I did here. I build one image that 
-I used for both with a specific start command for the initContainer. In this setup you could even use ACE Certified 
-Container images if you wanted to.
+**Prebaked**<br />
+If you have full control over what gets deployed, prebaking trims most of the overhead from container startup. You can 
+ship images that spin up in seconds. The catch is obvious: everything has to be baked in. Configs and secrets can still 
+be added at runtime, but BAR files and optimizations are fixed during build. And if your build and runtime environments 
+don’t match exactly, all those optimizations go to waste.
+
+**Init containers**<br />
+This approach works if you want flexibility without giving up startup speed. The build stays lean, and the init container 
+takes care of deploy and optimize at runtime. Once it finishes, the runtime container starts warm from that prepared state. 
+The benefit is that you keep dynamic pipelines while still getting fast startup. The cost is a bit more complexity in your 
+Kubernetes setup.
+
+The base image is just the baseline, nothing more. The prebaked image is all about speed, but you lock yourself into what 
+you built. The init container sits in the middle: faster startup without baking everything into the build, at the cost of 
+a bit more complexity. Pick your poison.
 
 ## Remarks
 
-There are a number of ways to optimize your code and build process that also impact the performance of you runtime. I've
-talked about these before in another blog, so I encourage you to go look at that one. For now I just wanted to have a look
-what I could do at the runtime level itself to minimize the startup resource requirement of the actual runtime container.
+There are plenty of other ways to squeeze more performance out of ACE. Smarter code, cleaner builds, better packaging. 
+All of that matters. I’ve written about those before (and might do so again)), so I won’t repeat myself here. This time 
+I only wanted to see what I could change at runtime to make containers start lighter.
 
-I have made some assumptions and taken some shortcuts here and there, just for the sake of making this easier for me 
-(since I'm the one testing and writing, it seems only fair that I take a few shortcuts).
-- I have baked all bar files inside my images. You don't have to, you can still mount them when spinning up your container 
-for the base and init-container setup.
-- I'm using a very simple library and application. If you use more or more complex libs/apps, you results should even be 
-more drastic.
-  ...
+And yes, I cut some corners:
+- I baked the BAR files straight into the images. You can just as well mount them when the container starts.
+- I used tiny sample flows and libraries. Real flows with heavy schemas will show an even bigger gap between cold and 
+warm starts.
+
+I wasn’t aiming for a winner here. Just wanted to see what happens when you tweak startup at runtime. Turns out you have 
+options, each with their own quirks. And with dynamic startup resources coming in the future, there’s still more ground 
+to cover.
 
 ---
 
-Resources
+## Other blogs from the Containerizing IBM ACE series
+
+* [Containerizing IBM ACE: A Blog Series – The Basics](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/02/containerizing-ibm-ace-a-blog-series-the-basics)
+* [Containerizing IBM ACE: A Blog Series - Images vs Artifacts](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/containerizing-ibm-ace-a-blog-series-images-vs-art)
+* [Containerizing IBM ACE: A Blog Series - Things to Consider in Containers](https://community.ibm.com/community/user/blogs/matthias-blomme/2025/09/11/things-to-consider-in-containers)
+* [Containerizing IBM ACE: A Blog Series - Scoping your runtimes]()
+* [Containerizing IBM ACE: A Blog Series - Container Startup Optimization]()
+
+---
+
+Written by [Matthias Blomme](https://www.linkedin.com/in/matthiasblomme/) 
+
+\#IBMChampion \
+\#AppConnectEnterprise(ACE)
